core-services/Cilium/cilium-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-agent-metrics
  namespace: kube-system
  labels:
    k8s-app: cilium
spec:
  clusterIP: None
  selector:
    k8s-app: cilium
  ports:
    - name: metrics
      port: 9962
      targetPort: 9962
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-operator-metrics
  namespace: kube-system
  labels:
    io.cilium/app: operator
spec:
  clusterIP: None
  selector:
    io.cilium/app: operator
  ports:
    - name: metrics
      port: 9963
      targetPort: 9963
